src/objects/Outreach__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Outreach__c</fullName>
        <label>Additional Outreach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audience_Size__c</fullName>
        <label>Audience Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <inlineHelpText>Who is the audience for this outreach?</inlineHelpText>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/International Non-Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Legislative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Non-Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which  Event was this in relation to?</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Outreach (Event)</relationshipLabel>
        <relationshipName>Outreach1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Date of briefing/meeting</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Lead_Staff__c</fullName>
        <formula>Primary_Deliverable__r.Lead_Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Lead Staff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable_Release_Date__c</fullName>
        <formula>Primary_Deliverable__r.Product_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Notes about the topics discussed</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interviewed_By__c</fullName>
        <label>Interviewed By:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Staff__c</fullName>
        <label>Lead Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Must_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Op_Ed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the clip is an Op Ed</inlineHelpText>
        <label>Op Ed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outlet_Reach__c</fullName>
        <label>Outlet Reach</label>
        <picklist>
            <picklistValues>
                <fullName>Network News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picked_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did your outreach result in a published blog post?</inlineHelpText>
        <label>Picked up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Press_Type__c</fullName>
        <label>Press Publication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Column</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Op-Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show_Name__c</fullName>
        <label>Show Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <label>SourceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Occurred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TV_Type__c</fullName>
        <inlineHelpText>Was this an appearance by an employee or was your organization, or someone on behalf of your organization, mentioned?</inlineHelpText>
        <label>TV Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentioned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Mentions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press/Media Hits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Outreach</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Department__c</columns>
        <columns>Primary_Staff__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outreach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outreach</pluralLabel>
    <recordTypes>
        <fullName>Impact</fullName>
        <active>true</active>
        <label>Impact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting</fullName>
        <active>true</active>
        <description>For meetings, and phone calls with key audiences.</description>
        <label>Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Press_Clips_Print</fullName>
        <active>true</active>
        <description>For print references only.</description>
        <label>Press Clips - Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Press_Clips_Radio</fullName>
        <active>true</active>
        <description>For radio broadcasts/webcasts that reference your organization.</description>
        <label>Press Clips - Radio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Press_Clips_TV</fullName>
        <active>true</active>
        <description>For TV appearances or mentions.</description>
        <label>Press Clips - TV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Testimony_Speech</fullName>
        <active>true</active>
        <label>Testimony/Speech</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>